# LCM_wrapper

./: .gitignore  README.md  demo_simple.py  installationGuide.md
lcm-code/: .gitignore  .model.example  README.md  pyproject.toml  walkthrough.md
lcm-code/src/lcm/: __init__.py  base.py  cache.py  config.py  errors.py  model.py  registry.py  utils.py
lcm-code/src/lcm/providers/: huggingface.py  ollama.py
lcm-code/tests/: demo.py  demo_simple.py  test_chain.py  test_extract.py  test_memory.py  test_middleware.py  test_peek.py
lcm-pkg/: lcm-0.1.0-py3-none-any.whl
