[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lcm"
version = "0.1.0"
description = "A unified interface for Ollama and Hugging Face local/cloud runtimes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.0"]
hf = ["transformers>=4.30.0", "torch", "huggingface_hub"]
all = [
    "ollama>=0.1.0",
    "transformers>=4.30.0",
    "torch",
    "huggingface_hub",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]
